--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,9 +1,7 @@
 {
   "recommendations": [
     "ms-azuretools.vscode-azurefunctions",
-    "ms-toolsai.jupyter",
     "ms-azuretools.vscode-azurestaticwebapps",
-    "1yib.nodejs-bundle",
-    "humao.rest-client"
+    "ms-toolsai.jupyter"
   ]
 }
