--- a/local.settings.json
+++ b/local.settings.json
@@ -5,6 +5,7 @@
     "FUNCTIONS_WORKER_RUNTIME": "node",
     "DATABASE_CONNECTION_STRING": "<YOUR_DATABASE_CONNECTION_STRING>"
   },
+  "ConnectionStrings": {},
   "Host": {
     "LocalHttpPort": 7071,
     "CORS": "*"
