--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "@azure/cosmos": "^4.5.0",
     "@azure/functions": "^4.3.0",
-    "@azure/identity": "^4.11.1"
+    "@azure/identity": "^4.11.1",
+    "dotenv": "^17.2.1"
   },
   "devDependencies": {
     "@azure/static-web-apps-cli": "^2.0.6",
