--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "@azure/cosmos": "^4.5.0"
+    "@azure/cosmos": "^4.5.0",
+    "@azure/functions": "^4.7.2-preview"
   },
   "name": "azure-static-web-app",
   "version": "1.0.0",
@@ -10,10 +11,12 @@
     "test": "tests"
   },
   "devDependencies": {
-    "@playwright/test": "^1.54.2"
+    "@playwright/test": "^1.54.2",
+    "prettier": "^3.6.2"
   },
   "scripts": {
     "start": "swa start app --api-location api",
+    "format": "prettier --no-error-on-unmatched-pattern --write 'api/**/*.js' *.md'' 'docs/**/*.md' 'schema/**/*.json'",
     "test": "playwright test"
   },
   "repository": {
