--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,6 @@ jobs:
           cache-dependency-path: package-lock.json
 
       - name: Cache node modules
-        ## if: false # disabled
         id: cache-nodemodules
         uses: actions/cache@v4
         env:
@@ -59,3 +58,10 @@ jobs:
       - name: Run tests
         run: |
           npm run test --if-present
+
+      - uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
