--- a/infra/Makefile
+++ b/infra/Makefile
@@ -6,12 +6,15 @@ location?=westus2
 .PHONY: all status outputs test clean
 
 # https://learn.microsoft.com/en-us/azure/static-web-apps/publish-bicep
-all:
+all: lint
 	az account show || az login --use-device-code
 	az group create --name $(rgName) --location $(location)
 	az deployment group create \
 		--resource-group $(rgName) \
 		--template-file main.bicep
+
+lint:
+	az bicep lint --file main.bicep
 
 status:
 	az resource list --resource-group $(rgName) --location $(location) --output table
