--- a/api/package.json
+++ b/api/package.json
@@ -7,10 +7,9 @@
     "start": "func start",
     "test": "echo \"No tests yet...\""
   },
-  "dependencies": {
+ "dependencies": {
     "@azure/cosmos": "^4.5.0",
-    "@azure/functions": "^4.0.0",
-    "dotenv": "^17.2.1"
+    "@azure/functions": "^4.0.0"
   },
   "devDependencies": {
     "azure-functions-core-tools": "^4.x"
