chore: use root package.json only for dev tools

--- a/package.json
+++ b/package.json
@@ -1,16 +1,9 @@
 {
-  "dependencies": {
-    "@azure/cosmos": "^4.5.0",
-    "@azure/functions": "^4.7.2-preview"
-  },
-  "name": "azure-static-web-app",
-  "version": "1.0.0",
-  "description": "[![CI](https://github.com/atrakic/azure-static-web-app/actions/workflows/ci.yml/badge.svg)](https://github.com/atrakic/azure-static-web-app/actions/workflows/ci.yml)",
-  "main": "app.js",
   "directories": {
     "test": "tests"
   },
   "devDependencies": {
+    "@azure/static-web-apps-cli": "^2.0.6",
     "@playwright/test": "^1.54.2",
     "prettier": "^3.6.2"
   },
@@ -18,17 +11,5 @@
     "start": "swa start app --api-location api",
     "format": "prettier --no-error-on-unmatched-pattern --write 'api/**/*.js' *.md'' 'docs/**/*.md' 'schema/**/*.json'",
     "test": "playwright test"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/atrakic/azure-static-web-app.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/atrakic/azure-static-web-app/issues"
-  },
-  "homepage": "https://github.com/atrakic/azure-static-web-app#readme"
+  }
 }
