--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -43,8 +43,8 @@ jobs:
           action: "upload"
           ###### Repository/Build Configurations - These values can be configured to match your app requirements. ######
           # For more information regarding Static Web App workflow configurations, please visit: https://aka.ms/swaworkflowconfig
-          app_location: "app" # App source code path
-          api_location: "api" # Api source code path - optional
+          app_location: "src/web" # App source code path
+          api_location: "." # Api source code path - optional
           output_location: "" # Built app content directory - optional
           production_branch: "dev"
           github_id_token: ${{ steps.idtoken.outputs.result }}
