--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,5 @@
 {
-  "recommendations": [
-    "ms-azuretools.vscode-azurefunctions",
-    "ms-azuretools.vscode-azurestaticwebapps",
-    "ms-toolsai.jupyter"
-  ]
+    "recommendations": [
+        "ms-azuretools.vscode-azurefunctions"
+    ]
 }
