--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -44,11 +44,12 @@ jobs:
           ###### Repository/Build Configurations - These values can be configured to match your app requirements. ######
           # For more information regarding Static Web App workflow configurations, please visit: https://aka.ms/swaworkflowconfig
           app_location: "src/web" # App source code path
-          api_location: "." # Api source code path - optional
+          api_location: "" # Api source code path - optional
           output_location: "" # Built app content directory - optional
           production_branch: "dev"
           github_id_token: ${{ steps.idtoken.outputs.result }}
           skip_deploy_on_missing_secrets: true
+          skip_app_build: true # using no-framework here
           ###### End of Repository/Build Configurations ######
 
   close_pull_request_job:
