--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@azure/cosmos": "^4.5.0",
-    "@azure/functions": "^4.0.0"
+    "@azure/functions": "^4.0.0",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.55.0",
